--- a/main.tex
+++ b/main.tex
@@ -1,12 +1,7 @@
 \documentclass[8pt, twocoloumn]{article}
 	\usepackage[left=2.5cm, right=2.5cm, top=2.5cm, bottom=1.5cm]{geometry}
 
-    \title{\textbf{Geometric Phase in Quantum Theory: 
-    A Review}}
-    
-    
-    \author{prikarsartam}
-    \date{02.08.2021}
+
     
 
 \usepackage{amsmath}
@@ -20,10 +15,17 @@
 \usepackage{graphicx}
 \usepackage{lipsum}
 \usepackage{docmute}
+\usepackage{authblk}
 
 
 
-
+    \title{\textbf{Geometric Phase in Quantum Theory: 
+    A Review}}
+    
+    
+    \author[1]{Pritam Sarkar}
+    \affil[1]{Indian Association for the Cultivation of Science}
+    \date{02.08.2021}
 
 \begin{document}
 
@@ -1649,9 +1651,10 @@ Where $i, j$ represents initial and final states, which one finds exactly same t
     
 
 
-\section{conclusion:}
+\section{Conclusion:}
 
-It's just another example of 'unreasonable effectiveness of mathematics in natural science' as Mr. Wigner has mentioned.
+Quantum theory being the theory of a system that the observer is not looking at, it requires closed continuous groups upon whose action the state vector must evolve during time nobody is affecting it. Generally the $U(1)$ group thus pops up in order to incorporate the electromagnetic interactions in the picture. The differential geometric formulation of geometric phases associated with closed-parameter evolution of a quantum system is shown to have a holonomic interpretation with respect to the parallel transport over the $U(1)$ fibre-bundle in the Hilbert Space. \\
+Most interestingly the holonomy associated with classical theory of gravity are mathematically in close resemblance with the geometric picture of physically realisable phase factor in unitary quantum evolution. 
 
 
 \include{allbibs}
